--- a/package.json
+++ b/package.json
@@ -5,20 +5,23 @@
   "dependencies": {
     "@react-google-maps/api": "^2.20.2",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.7",
     "chart.js": "^4.4.4",
+    "clsx": "^2.1.1",
     "lucide-react": "^0.451.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
+    "styled-components": "^6.1.13",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "react-scripts start"
   },
   "eslintConfig": {
     "extends": [
